fixed experience header spacing error + added tech stack used on projects

--- a/src/App.css
+++ b/src/App.css
@@ -320,10 +320,9 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  max-height: 36%;
   min-height: 50vh;
-  background-color: var(--main-background-color);
   z-index: 1;
+  background-color: var(--main-background-color);
 }
 
 .work-open {
@@ -335,8 +334,8 @@ body::-webkit-scrollbar-thumb {
 .main-work-title {
   font-size: 2rem;
   color: white;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 .main-work-body {
@@ -371,6 +370,14 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
   width: 100%;
   padding: 20px 0px 50px 25px;
+}
+
+.main-work-display-sub {
+  text-align: center;
+  margin: 10px;
+  height: 60px;
+  font-size: 0.9rem;
+  color: #9de6f5;
 }
 
 .main-work-item-container {
@@ -534,7 +541,7 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   width: 40%;
   font-size: 1.2em;
-  padding-top: 15px;
+  padding-top: 25px;
   padding-bottom: 50px;
 }
 
@@ -563,46 +570,6 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   align-items: flex-start;
   padding-left: 10px;
-}
-
-.experience-text {
-  margin-top: -10px;
-}
-
-.experience-text2 {
-  margin-top: -5px;
-  color: rgb(212, 212, 212, 0.7);
-}
-
-.experience-info-title {
-  padding-top: 35px;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-  display: flex;
-}
-
-.experience-info-desc {
-  padding-top: 15px;
-  font-size: 0.8em;
-}
-
-.experience-soc {
-  width: 60px;
-  border-radius: 5px;
-  background-color: var(--secondary-background-colour);
-}
-
-.experience-FGD {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 60px;
-  height: 60px;
-  border-radius: 5px;
-  font-size: 1.2em;
-  color: var(--main-background-color);
-  background-color: var(--secondary-background-colour);
 }
 
 .bio {
@@ -759,9 +726,6 @@ body::-webkit-scrollbar-thumb {
     right: 0;
     visibility: visible;
   }
-  .experience {
-    margin-top: 200px;
-  }
 }
 
 @media (max-width: 30em) {
@@ -799,9 +763,6 @@ body::-webkit-scrollbar-thumb {
     justify-content: center;
     padding: 15px;
     width: 90%;
-  }
-  .experience {
-    margin-top: 110px;
   }
   .display-info-images-container {
     overflow-x: scroll;
